--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server",
+    "start": "cross-env NODE_ENV=development node build/scripts/start",
     "lint": "./node_modules/.bin/eslint src --fix"
   },
   "keywords": [],
@@ -35,6 +35,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.20.0",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -50,6 +51,5 @@
     "webpack": "^3.9.1",
     "webpack-dev-server": "^2.9.5",
     "webpack-hot-middleware": "^2.21.0"
-
   }
 }
