--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.0.0-alpha",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-modal": "^3.1.8",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.0",
     "react-router-dom": "^4.2.2",
