--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-alpha",
     "react": "^16.2.0",
+    "react-bootstrap-modal": "^4.0.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.8",
     "react-redux": "^5.0.6",
